--- a/cmd/backup/static/backup.html
+++ b/cmd/backup/static/backup.html
@@ -43,13 +43,12 @@
                                 <th data-field="countFailed" data-sortable="true" data-formatter="backupFailedFormatter">Failed </th>
                                 <th data-field="sizeFailed" data-sortable="true" data-formatter="backupFailedFormatter" data-visible="false">Failed (B)</th>
 
-                                <th data-field="countSuccess" data-sortable="true" data-formatter="backupSuccessFormatter">successCount</th>
-                                <th data-field="sizeSuccess" data-sortable="true" data-formatter="backupSuccessFormatter">successSize </th>
+                                <th data-field="countSuccess" data-sortable="true" data-formatter="backupSuccessFormatter">Success</th>
+                                <th data-field="sizeSuccess" data-sortable="true" data-formatter="backupSuccessFormatter" data-visible="false">Success (B) </th>
 
                                 <th data-field="extensions" data-sortable="true">extensions</th>
                                 <th data-field="sizeDistribution" data-sortable="true">sizeDistribution</th>
                                 <th data-field="message" data-sortable="true">message </th>
-                                <th data-field="version" data-sortable="true">version </th>
                                 <th data-field="readingTime" data-sortable="true">readingTime </th>
                                 <th data-field="comparisonTime " data-sortable="true">comparisonTime</th>
                                 <th data-field="backupTime " data-sortable="true">backupTime</th>
@@ -144,7 +143,7 @@
             return link[0].outerHTML;
         }
 
-        function backupFailedFormatter(val, row, idx) {
+        function backupSuccessFormatter(val, row, idx) {
             let link = $("<a/>", {
                 href: "#",
                 class: "has-popover",
@@ -154,7 +153,7 @@
                 "title": "",
                 "data-original-title": row.countSuccess + ' file(s) failed to backup',
                 "data-html": true,
-                "data-content": bytesWithSize(row.countSuccess, "<br>"),
+                "data-content": bytesWithSize(row.sizeSuccess, "<br>"),
             }).html(
                 val.toLocaleString()
             );
@@ -271,7 +270,7 @@
             return bytes.toFixed(1)+' '+units[u];
         }
 
-        function bytesWithSize(bytes, prefix, suffix) {
+        function    bytesWithSize(bytes, prefix, suffix) {
             if (prefix === undefined) {
                 prefix = "";
             }
